fixed layout issues ie8 made contributor list reladonly for converstation leader

--- a/app/assets/stylesheets/locations.css
+++ b/app/assets/stylesheets/locations.css
@@ -58,6 +58,9 @@
   width:14em;
   margin-right: 50px;
 }
+.readonly.conversation span.table-info{
+  margin-right: 0;
+}
 .conversation span.operations {
   float:right;
   width: 50px;
